# MiniMIDI

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  MiniMIDI.cbp  MiniMIDI.sln  MiniMIDI.vcxproj  README.md  TODO.txt  build-win32.sh
src/: .gitignore  .ycm_extra_conf.py  AboutDialog.cc  AboutDialog.h  AboutWindow.h  MIDI.cc  MIDI.h  MIDILoader.cc  MIDILoader.h  MainWindow.cc  MainWindow.h  Makefile  NoteEditor.cc  NoteEditor.h  SettingsDialog.cc  SettingsDialog.h  Synth.cc  Synth.h  Viewport.cc  Viewport.h  license_text.h  main.cc  notes_pixmap.h
